changed stories to reading list

--- a/www/_site.yml
+++ b/www/_site.yml
@@ -9,7 +9,7 @@ navbar:
     - text: "About Me"
       icon: fa-user-check
       href: about.html
-    - text: "Stories"
+    - text: "Reading list"
       icon: fa-book
       menu:
         - text: "Story 1"
