--- a/www/_site.yml
+++ b/www/_site.yml
@@ -1,26 +1,27 @@
 name: "www"
 output_dir: "../docs"
 navbar:
-  title: "Lauren Low"
+  title: "big data and big emotions"
   left:
-    - text: "Home"
+    - text: "home"
       icon: fa-home
       href: index.html
-    - text: "About Me"
+    - text: "about"
       icon: fa-user-check
       href: about.html
-    - text: "Reading list"
-      icon: fa-book
+    - text: "my writing"
+      icon: fa-pen
+      href: work.html
+    - text: "reading list"
+      icon: fa-book-open
       href: books.html
   right:
     - icon: fa-envelope 
-      href: mailto:bbaumer@smith.edu
+      href: mailto:lauren.s.low@gmail.com
     - icon: fa-github
-      href: http://www.github.com/beanumber
-    - icon: fa-twitter
-      href: http://www.twitter.com/BaumerBen
+      href: https://github.com/laurenslow
     - icon: fa-linkedin
-      href: https://www.linkedin.com/in/ben-baumer-809b3a75
+      href: https://www.linkedin.com/in/lauren-l-856367b0/
 
 output:
   html_document:
